# orderflow-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: orderbook.rs
docs/paper/: orderflow_research.tex
docs/reports/: P7_technical_indicator_IC_analysis.md
docs/superpowers/plans/: 2026-04-14-techanalysis.md
docs/superpowers/specs/: 2026-04-14-techanalysis-design.md
src/: lib.rs  main.rs
src/analysis/: backtest.rs  ml.rs  mod.rs  report.rs  stats.rs  techind.rs  techreport.rs
src/commands/: mod.rs  techanalysis.rs
src/features/: depth.rs  microprice.rs  mod.rs  ofi.rs  spread.rs  trade_pressure.rs
src/orderbook/: delta.rs  mod.rs  snapshot.rs
src/output/: csv_writer.rs  mod.rs  parquet_writer.rs
src/pipeline/: alpaca.rs  binance_rest.rs  bitstamp.rs  bybit.rs  coinbase.rs  dukascopy.rs  dukascopy_fetch.rs  finnhub.rs  gemini.rs  iex.rs  kraken.rs  labels.rs  lobster.rs  mod.rs  okx.rs  polygon.rs  realdata.rs  tiingo.rs  ws.rs  yahoo.rs
src/simulator/: agents.rs  flow_gen.rs  lob_sim.rs  mod.rs
tests/: property_tests.rs  techind_test.rs
