[package]
name = "orderflow-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orderflow"
path = "src/main.rs"

[features]
default = ["ingest", "io", "sim"]
ingest = ["dep:tokio", "dep:tokio-tungstenite", "dep:tokio-util", "dep:futures-util", "dep:reqwest", "dep:native-tls", "dep:tokio-native-tls", "dep:lzma-rs"]
io     = ["dep:arrow2", "dep:parquet2"]
sim    = ["dep:rand", "dep:rand_distr", "dep:statrs"]

[dependencies]
# Core — always compiled
ordered-float = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
ndarray = "0.15"
rayon = "1"

# Ingest — gated
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["stream", "json", "cookies"], optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
lzma-rs = { version = "0.3", optional = true }

# IO — gated
arrow2 = { version = "0.18", features = ["io_parquet"], optional = true }
parquet2 = { version = "0.17", optional = true }

# Simulation — gated
rand = { version = "0.8", features = ["small_rng"], optional = true }
rand_distr = { version = "0.4", optional = true }
statrs = { version = "0.16", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "orderbook"
harness = false
